--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Welcome to CONTributor</a>
+        </li>
+    </ul>
+
+</nav>
 <router-outlet></router-outlet>
